<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/sp15"
                android:layout_marginTop="@dimen/sp15"
                android:layout_marginEnd="@dimen/sp15"
                android:layout_marginBottom="@dimen/sp15"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/sp60">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/sp10"
                    android:text="@string/identification_document"
                    android:textColor="@color/dark_greenish_blue"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document_type"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:paddingLeft="@dimen/sp10"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document_number"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/document_issue_date"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_birth"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:paddingLeft="@dimen/sp10"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/sp10"
                    android:text="@string/set_up_your_account"
                    android:textColor="@color/dark_greenish_blue"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_email"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/security_pin"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_security_pin"
                    android:paddingBottom="@dimen/sp10"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_greenish_blue"/>

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sp10"
                    android:background="@drawable/btn_rounded_gray"
                    android:text="@string/next"
                    android:textColor="@color/dark_greenish_blue"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>
</layout>