<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sp15"
            android:layout_marginTop="@dimen/sp15"
            android:layout_marginEnd="@dimen/sp15"
            android:layout_marginBottom="@dimen/sp15"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp60"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/sp35"
                    android:layout_height="@dimen/sp35"
                    android:layout_gravity="center"
                    android:src="@drawable/back_one" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/finalize"
                    android:textColor="@color/dark_greenish_blue"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp60"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_grupo_three" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_oinkpolicia" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_very_close_to_being"
                        android:textColor="@color/gray_ligth_one"
                        android:textSize="@dimen/sp20"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_just_need_to_carefully"
                        android:textColor="@color/gray_ligth_one"
                        android:textSize="@dimen/sp20" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp2"
                android:layout_marginTop="@dimen/sp10"
                android:layout_marginBottom="@dimen/sp10"
                android:background="@color/application_color" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/sp10"
                    android:text="@string/the_most_important"
                    android:textColor="@color/dark_greenish_blue"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_open_the_low_amount_deposit"
                            android:textColor="@color/gray_ligth_one"
                            android:textSize="@dimen/sp20" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/sp10"
                            android:text="@string/read_your_contract"
                            android:textColor="@color/dark_greenish_blue"
                            android:textSize="@dimen/sp18"
                            android:textStyle="bold" />

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/chk_terms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/i_have_read_and_accept_the_contract"
                            android:textSize="@dimen/sp18"
                            />

                        <Button
                            android:id="@+id/btn_finalize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/sp10"
                            android:background="@drawable/btn_rounded_green"
                            android:text="@string/next"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </ScrollView>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</layout>