<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelComeActivity"
    android:background="@color/gray_ligth"
    android:padding="@dimen/sp10">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/card_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/sp10"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="24dp"
            tools:ignore="MissingConstraints">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_login"
                card_view:cardBackgroundColor="#ffffff"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp"
                card_view:cardUseCompatPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_marrano_regalo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/welcome_to_coink"
                        android:textColor="@color/dark_greenish_blue"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_created"
                        android:textColor="@color/gray_ligth_one"
                        android:textSize="@dimen/sp20" />

                    <Button
                        android:id="@+id/btn_finalize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sp10"
                        android:background="@drawable/btn_rounded_green"
                        android:text="@string/next"
                        android:textColor="@color/dark_greenish_blue"
                        android:textStyle="bold" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>