<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/sp15"
            android:layout_marginTop="@dimen/sp15"
            android:layout_marginEnd="@dimen/sp15"
            android:layout_marginBottom="@dimen/sp15"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp60"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/sp35"
                    android:layout_height="@dimen/sp35"
                    android:layout_gravity="center"
                    android:src="@drawable/back_one" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cell_phone_number"
                    android:textColor="@color/dark_greenish_blue"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp60"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_grupo_one" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_oink" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_to_start"
                        android:textSize="@dimen/sp20"
                        android:textColor="@color/gray_ligth_one"/>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp2"
                android:layout_marginTop="@dimen/sp10"
                android:layout_marginBottom="@dimen/sp10"
                android:background="@color/application_color" />

            <EditText
                android:id="@+id/cell_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sp5"
                android:background="@drawable/edittext"
                android:gravity="center"
                android:hint="@string/hint_cell_phone_number"
                android:inputType="number|phone"
                android:focusable="false"
                android:editable="false"
                android:padding="10dp"
                android:maxLength="10"
                android:textColor="@color/dark_greenish_blue"
                android:textSize="@dimen/sp20"
                />

            <include
                android:id="@+id/layout_key_pad"
                layout="@layout/key_pad_layout" />

        </LinearLayout>


    </RelativeLayout>
</layout>